2003-07-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-debug-log-view.c, cong-dispspec.c, cong-dom-view.c, cong-menus.c, cong-parser-error.c, global.h, main.c, plugin-docbook.c, plugin-dtd.c, plugin-validate.c, xmldata.c

	Finished the refactoring of cong_util code

	* plugin-lists-area-listitem.c, plugin-lists-area-listitem.h, plugin-lists-node-element-listitem.c, plugin-lists-node-element-listitem.h, Makefile.am

	New files: support for a plugin that renders DocBook <listitem> tags

	* cong-util.c, cong-util.h

	New files, taken from parts of main.c and global.h

	* global.h, main.c

	Fixed the Norman Walsh stylesheet lookup to use the XML catalog based upon a patch by Varga Robert

2003-07-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-tree-view.c

	Optimised creation by only creating the GtkTreeView after the store is populated

	* cong-primary-window.c

	More debugging options, including ability to select either/both/no editor widget

	* cong-editor-widget.h, cong-editor-widget3-impl.h, cong-editor-widget3.c

	Made the new editor widget be a genuine subclass of GtkDrawingArea, rather than a hack

	* cong-editor-node-text.c

	Improved a cast
	
	* cong-editor-node-element-structural.c

	Click support

	* cong-document.c
		
	Optimised the title bar handling

	* xmldata.c

	Fixed a run-time warning
	
	* cong-editor-widget.h

	New file: declaration of new editor widget

	* cong-editor-area-bin.c, cong-editor-area-composer.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.h, cong-editor-widget3.c, cong-marshal.c, cong-marshal.h, global.h

	Support for clicking, dragging selections; editor nodes now know about their parents; text nodes can be coloured; 

	* cong-text-cache.c, cong-text-cache.h, Makefile.am
